--- a/web/page/templates/pages/zutaten_liste.html
+++ b/web/page/templates/pages/zutaten_liste.html
@@ -1,49 +1,131 @@
+<!-- zutaten_liste.html -->
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Zutatenliste</h1>
-    <div class="row">
-        {% for zutat in zutaten %}
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="{{ zutat.bild.url }}" class="card-img-top" alt="{{ zutat.beschreibung }}">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ zutat.beschreibung }}</h5>
-                        <p class="card-text">Mindesthaltbarkeitsdatum: {{ zutat.mindesthaltbarkeitsdatum }}</p>
-                        <p class="card-text">Anzahl: <span id="quantity-{{ zutat.id }}">{{ zutat.anzahl }}</span></p>
-                        <p class="card-text">Rubrik: {{ zutat.rubrik }}</p>
-                        <button class="btn btn-danger reduce-quantity" data-id="{{ zutat.id }}">-</button>
+
+
+<style>
+    .card-img-top {
+        height: 400px; /* Gib hier die gewünschte Höhe für die Bilder an */
+        object-fit: cover;
+    }
+</style>
+
+<h1 class="d-inline-block">Zutatenliste</h1>
+<a href="/zutaten/hinzufuegen" class="btn btn-primary float-right">Zutat hinzufügen</a>
+
+<div class="row">
+    {% for zutat in zutaten %}
+        <div class="col-md-4">
+            <div class="card" id="card-{{ zutat.id }}">
+                <div class="card-header">
+                    <h5 class="card-title">{{ zutat.beschreibung }}</h5>
+                </div>
+                <img src="{{ zutat.bild.url }}" class="card-img-top" alt="{{ zutat.beschreibung }}"
+                    onclick="reduceQuantity('{{ zutat.id }}')">
+                <div class="card-body">
+                    <p class="card-text">Mindesthaltbarkeitsdatum: {{ zutat.mindesthaltbarkeitsdatum }}</p>
+                    <p class="card-text">Anzahl: <span id="quantity-{{ zutat.id }}">{{ zutat.anzahl }}</span></p>
+                    <p class="card-text">Rubrik: {{ zutat.rubrik }}</p>
+                    <div class="btn-group btn-group-toggle btn-block" data-toggle="buttons">
+                        <button class="btn btn-success increase-quantity" data-id="{{ zutat.id }}"
+                            onclick="increaseQuantity('{{ zutat.id }}')">+</button>
                     </div>
                 </div>
             </div>
-        {% endfor %}
-    </div>
+        </div>
+    {% endfor %}
+</div>
+
 
     <script>
-        // Füge einen Event Listener für den Klick auf den Button hinzu
-        document.addEventListener('DOMContentLoaded', function() {
-            var reduceButtons = document.getElementsByClassName('reduce-quantity');
-            
-            for (var i = 0; i < reduceButtons.length; i++) {
-                reduceButtons[i].addEventListener('click', function() {
-                    var zutatId = this.getAttribute('data-id');
-                    var quantityElement = document.getElementById('quantity-' + zutatId);
-                    var quantity = parseInt(quantityElement.innerText);
-                    
-                    if (quantity > 0) {
-                        // Reduziere die Anzahl um 1
-                        quantity -= 1;
-                        
-                        // Aktualisiere die Anzeige der Anzahl
-                        quantityElement.innerText = quantity;
-                        
-                        if (quantity === 0) {
-                            // Wenn die Anzahl 0 erreicht ist, entferne die Zutat aus der Liste
-                            this.parentNode.parentNode.parentNode.remove();
-                        }
-                    }
-                });
+        function reduceQuantity(zutatId) {
+            var quantityElement = document.getElementById('quantity-' + zutatId);
+            var quantity = parseInt(quantityElement.innerText);
+
+            if (quantity > 0) {
+                // Reduziere die Anzahl um 1
+                quantity -= 1;
+
+                // Aktualisiere die Anzeige der Anzahl
+                quantityElement.innerText = quantity;
+
+                if (quantity === 0) {
+                    // Wenn die Anzahl 0 erreicht ist, entferne die Zutat aus der Liste
+					updateQuantityOnServer(zutatId, quantity);
+					
+                    var card = document.getElementById('card-' + zutatId);
+                    card.parentNode.removeChild(card);
+     
+					
+                }
+
+                // Sende AJAX-Anfrage an den Server, um die Anzahl zu aktualisieren
+                updateQuantityOnServer(zutatId, quantity);
             }
-        });
+        }
+
+        function increaseQuantity(zutatId) {
+            var quantityElement = document.getElementById('quantity-' + zutatId);
+            var quantity = parseInt(quantityElement.innerText);
+
+            // Erhöhe die Anzahl um 1
+            quantity += 1;
+
+            // Aktualisiere die Anzeige der Anzahl
+            quantityElement.innerText = quantity;
+
+            // Sende AJAX-Anfrage an den Server, um die Anzahl zu aktualisieren
+            updateQuantityOnServer(zutatId, quantity);
+        }
+
+
+function updateQuantityOnServer(zutatId, quantity) {
+    var url = '/update_quantity/' + zutatId + '/';
+    var csrftoken = getCookie('csrftoken');
+    var data = {
+        'new_quantity': quantity
+    };
+	
+    fetch(url, {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+            'X-CSRFToken': csrftoken
+        },
+        body: JSON.stringify(data)
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (data.success) {
+            console.log('Die Anzahl wurde erfolgreich aktualisiert.');
+        } else {
+            console.log('Fehler beim Aktualisieren der Anzahl.');
+        }
+    })
+    .catch(error => {
+        console.log('Fehler beim Senden der AJAX-Anfrage:', error);
+    });
+}
+
+
+
+
+        // Funktion zum Abrufen des CSRF-Tokens aus den Cookies
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = cookies[i].trim();
+                    // Überprüfe, ob der Cookie den Namen 'csrftoken' hat
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
     </script>
 {% endblock %}
