--- a/web/page/templates/base.html
+++ b/web/page/templates/base.html
@@ -50,7 +50,7 @@
                     <a class="nav-link" href="{% url 'rezepte' %}">Rezepte</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'zutaten_liste' %}">Zutaten</a>
+                    <a class="nav-link" href="{% url 'ingredients_list' %}">Zutaten</a>
                 </li>     
             </ul>
         </div>
