--- a/web/page/templates/base.html
+++ b/web/page/templates/base.html
@@ -2,68 +2,101 @@
 <html>
 <head>
     <title>KURS</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        /* Füge hier dein eigenes CSS hinzu, um das Design anzupassen */
-        body {
-            padding-top: 60px;
-        }
-        .navbar {
-            width: 200px; /* Breite der vertikalen Navbar */
-            background-color: #f8f9fa;
-            height: 100vh; /* volle Höhe des Viewports */
+        .navbar-toggler {
             position: fixed;
-            top: 0;
+            top: 10px;
+            left: 10px;
+            z-index: 1000;
+            border: none;
+            outline: none;
+            background-color: transparent;
+        }
+
+        .navbar-toggler .bar {
+            display: block;
+            width: 25px;
+            height: 3px;
+            background-color: black;
+            margin: 5px 0;
+            transition: 0.4s;
+        }
+
+        .navbar-toggler.active .bar:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        .navbar-toggler.active .bar:nth-child(2) {
+            opacity: 0;
+        }
+
+        .navbar-toggler.active .bar:nth-child(3) {
+            transform: rotate(-45deg) translate(5px, -5px);
+        }
+
+        #sidebar {
+            position: fixed;
+            top: 50px;
             left: 0;
-            z-index: 1;
-            padding-top: 60px;
-			align-items: flex-start;
+            width: 250px;
+            height: 100%;
+            background-color: #f8f9fa;
+            transform: translateX(-100%);
+            transition: 0.4s;
+            z-index: 999;
         }
-        .navbar-nav {
-            width: 100%;
 
+        #sidebar.active {
+            transform: translateX(0);
         }
-        .navbar-nav .nav-link {
-            padding: 10px 20px;
-        }
-        .navbar-collapse {
-            justify-content: flex-start;
-        }
-        .navbar-brand {
-            margin-bottom: 1rem;
-        }
-        .content {
-            margin-left: 200px; /* Breite der vertikalen Navbar */
+
+        #content {
+            margin-top: 60px;
             padding: 20px;
+            transition: 0.4s;
         }
 
+        #content.active {
+            margin-left: 250px;
+        }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav flex-column">
-                <li class="nav-item">
-                    <a class="navbar-brand" href="#">KURS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'rezepte' %}">Rezepte</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'ingredients_list' %}">Zutaten</a>
-                </li>     
-            </ul>
-        </div>
+    <nav class="navbar navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
     </nav>
 
-    <div class="content">
-        {% block content %}
+    <div id="sidebar">
+        <ul class="list-group">
+            <li class="list-group-item"><a href="{% url 'rezepte' %}">Rezepte</a></li>
+            <li class="list-group-item"><a href="{% url 'ingredients_list' %}">Zutaten</a></li>
+        </ul>
+    </div>
+
+    <div id="content">
+         {% block content %}
         <!-- Hier kommt der Inhalt deiner Seite hin -->
         {% endblock %}
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        var sidebar = document.getElementById('sidebar');
+        var content = document.getElementById('content');
+        var navbarToggler = document.querySelector('.navbar-toggler');
+
+        navbarToggler.addEventListener('click', function() {
+            sidebar.classList.toggle('active');
+            content.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
