--- a/web/page/templates/pages/ingredients_list.html
+++ b/web/page/templates/pages/ingredients_list.html
@@ -31,6 +31,10 @@
         font-size: 8rem;
         font-weight: bold;
     }
+	
+	.row-gap {
+    margin: 10px;
+	}
 </style>
 
 <h1 class="d-inline-block">Zutatenliste</h1>
@@ -38,6 +42,11 @@
 
 <div class="row">
     {% for ingredient in ingredients %}
+	    {% if forloop.counter|divisibleby:4 %}
+            </div>
+			<p></p>
+			<div class="row">
+        {% endif %}
         <div class="col-md-4">
             <div class="card" id="card-{{ ingredient.id }}" onclick="highlightCard(this)">
                 <div class="card-header">
@@ -59,6 +68,7 @@
     {% endfor %}
 
     <div class="col-md-4">
+
         <div class="card">
 			<div class="card-header">
                 <h5 class="card-title">Neue Zutat hinzufügen</h5>
@@ -70,6 +80,7 @@
         </div>
         </div>
     </div>
+
 </div>
 
 
