--- a/web/page/templates/pages/add_ingredients.html
+++ b/web/page/templates/pages/add_ingredients.html
@@ -36,17 +36,23 @@
             </div>
             <div class="form-group">
                 <label for="id_quantity">Anzahl</label>
-                <input type="number" class="form-control" name="quantity" id="id_quantity" required>
+                <input type="number" class="form-control" name="quantity" id="id_quantity"  min="1" max="100" value="1" required>
             </div>
             <div class="form-group">
-                <label for="id_tag">Rubrik</label>
-                <input type="text" class="form-control" name="tag" id="id_tag" required>
-            </div>
+				<label>Tags</label>
+                <input type="text" data-role="tagsinput" class="form-control" name="tags">
+				<select id="tags" name="tags" multiple>
+                    {% for tag in used_tags %}
+                        <option value="{{ tag.name }}">{{ tag.name }}</option>
+                    {% endfor %}
+                </select>
+			<div>
             <button type="submit" class="btn btn-primary btn-block">Zutat hinzufügen</button>
         </form>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 </body>
 </html>
