Add classification network with some samples and integration into the website.

--- a/web/page/templates/base.html
+++ b/web/page/templates/base.html
@@ -76,6 +76,7 @@
         <ul class="list-group">
             <li class="list-group-item"><a href="{% url 'rezepte' %}">Rezepte</a></li>
             <li class="list-group-item"><a href="{% url 'ingredients_list' %}">Zutaten</a></li>
+            <li class="list-group-item"><a href="{% url 'classification' %}">Klassifizierung</a></li>
         </ul>
     </div>
 
