--- a/web/page/templates/pages/add_ingredients.html
+++ b/web/page/templates/pages/add_ingredients.html
@@ -53,6 +53,58 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#id_img').change(function() {
+                var imageData = new FormData();
+                var imageFile = $('#id_img')[0].files[0];
+                imageData.append('image', imageFile);
+                
 
+                var url =  '/image_classification/';
+                var csrftoken = getCookie('csrftoken');
+
+         
+                fetch(url, {
+                    method: 'POST',
+                    headers: {
+                       
+                        'X-CSRFToken': csrftoken
+                    },
+                    body: imageData
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        console.log('Image was classified');
+                        $('#id_description').html(data.image_class);
+                    } else {
+                        console.log('Error classify your image');
+                    }
+                })
+                .catch(error => {
+                    console.log('Error while sending Ajax request:', error);
+                });
+
+            });
+        });
+
+         // Funktion zum Abrufen des CSRF-Tokens aus den Cookies
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = cookies[i].trim();
+                    // Überprüfe, ob der Cookie den Namen 'csrftoken' hat
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+    </script>
 </body>
 </html>
