--- a/web/page/templates/pages/add_ingredients.html
+++ b/web/page/templates/pages/add_ingredients.html
@@ -39,6 +39,10 @@
                 <input type="number" class="form-control" name="quantity" id="id_quantity"  min="1" max="100" value="1" required>
             </div>
             <div class="form-group">
+                <label for="id_weight">Gewicht</label>
+                <input type="number" class="form-control" name="weight" id="id_weight"  min="0" max="10000" value="0">
+            </div>
+            <div class="form-group">
 				<label>Tags</label>
                 <input type="text" data-role="tagsinput" class="form-control" name="tags">
 				<select id="tags" name="tags" multiple>
