--- a/web/page/templates/pages/add_ingredients.html
+++ b/web/page/templates/pages/add_ingredients.html
@@ -5,15 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <style>
-        /* Füge hier dein eigenes CSS hinzu, um das Design anzupassen */
         body {
             padding-top: 60px;
+            font-family: Arial, sans-serif;
         }
         .container {
             max-width: 500px;
+            margin: 0 auto;
         }
-        .form-group {
-            margin-bottom: 20px;
+        h1 {
+            text-align: center;
+            font-size: 24px;
+            margin-bottom: 30px;
+            color: #333;
+        }
+        label {
+            font-weight: bold;
+        }
+        .form-control-file {
+            margin-bottom: 10px;
+        }
+        .form-control {
+            border-radius: 0;
+        }
+        .btn-primary {
+            border-radius: 0;
+            background-color: #3897f0;
+            border-color: #3897f0;
+        }
+        .btn-primary:hover, .btn-primary:focus {
+            background-color: #357ae8;
+            border-color: #357ae8;
+        }
+        .tagsinput {
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -43,20 +68,21 @@
                 <input type="number" class="form-control" name="weight" id="id_weight"  min="0" max="10000" value="0">
             </div>
             <div class="form-group">
-				<label>Tags</label>
-                <input type="text" data-role="tagsinput" class="form-control" name="tags">
-				<select id="tags" name="tags" multiple>
+                <label>Tags</label>
+                <input type="text" data-role="tagsinput" class="form-control tagsinput" name="tags">
+                <select id="tags" name="tags" multiple>
                     {% for tag in used_tags %}
                         <option value="{{ tag.name }}">{{ tag.name }}</option>
                     {% endfor %}
                 </select>
-			<div>
+            </div>
             <button type="submit" class="btn btn-primary btn-block">Zutat hinzufügen</button>
         </form>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.min.js"></script>
     <script>
         $(document).ready(function() {
             $('#id_img').change(function() {
@@ -64,15 +90,12 @@
                 var imageFile = $('#id_img')[0].files[0];
                 imageData.append('image', imageFile);
                 
-
-                var url =  '/image_classification/';
+                var url = '/image_classification/';
                 var csrftoken = getCookie('csrftoken');
 
-         
                 fetch(url, {
                     method: 'POST',
                     headers: {
-                       
                         'X-CSRFToken': csrftoken
                     },
                     body: imageData
@@ -89,11 +112,10 @@
                 .catch(error => {
                     console.log('Error while sending Ajax request:', error);
                 });
-
             });
         });
 
-         // Funktion zum Abrufen des CSRF-Tokens aus den Cookies
+        // Funktion zum Abrufen des CSRF-Tokens aus den Cookies
         function getCookie(name) {
             var cookieValue = null;
             if (document.cookie && document.cookie !== '') {
