--- a/web/page/templates/base.html
+++ b/web/page/templates/base.html
@@ -77,6 +77,7 @@
             <li class="list-group-item"><a href="{% url 'recipe_list' %}">Rezepte</a></li>
             <li class="list-group-item"><a href="{% url 'ingredients_list' %}">Zutaten</a></li>
             <li class="list-group-item"><a href="{% url 'classification' %}">Klassifizierung</a></li>
+            <li class="list-group-item"><a href="{% url 'folder_list' %}">Trainingsdaten</a></li>
         </ul>
     </div>
 
