Add navigaton button to all sites and Add recipie

--- a/web/page/templates/pages/classification.html
+++ b/web/page/templates/pages/classification.html
@@ -1,4 +1,6 @@
+{% extends 'base.html' %}
 
+{% block content %}
 
 <!DOCTYPE html>
 <html>
@@ -25,3 +27,4 @@
     {% endif %}
 </body>
 </html>
+{% endblock %}
