--- a/web/page/templates/pages/recipe_detail.html
+++ b/web/page/templates/pages/recipe_detail.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -28,3 +32,4 @@
   {% endfor %}
 </body>
 </html>
+{% endblock %}
