--- a/web/page/templates/pages/add_ingredients.html
+++ b/web/page/templates/pages/add_ingredients.html
@@ -1,3 +1,8 @@
+
+{% extends 'base.html' %}
+
+{% block content %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -134,3 +139,4 @@
     </script>
 </body>
 </html>
+{% endblock %}
