--- a/web/page/templates/pages/add_recipe.html
+++ b/web/page/templates/pages/add_recipe.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -205,3 +209,4 @@
   </form>
 </body>
 </html>
+{% endblock %}
