--- a/web/page/templates/pages/folder_list.html
+++ b/web/page/templates/pages/folder_list.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -35,3 +39,4 @@
     </form>
 </body>
 </html>
+{% endblock %}
