--- a/web/page/templates/base.html
+++ b/web/page/templates/base.html
@@ -75,6 +75,7 @@
     <div id="sidebar">
         <ul class="list-group">
             <li class="list-group-item"><a href="{% url 'recipe_list' %}">Rezepte</a></li>
+            <li class="list-group-item"><a href="{% url 'suggested_recipes' %}">Vorgeschlagene Rezepte</a></li>
             <li class="list-group-item"><a href="{% url 'ingredients_list' %}">Zutaten</a></li>
             <li class="list-group-item"><a href="{% url 'classification' %}">Klassifizierung</a></li>
             <li class="list-group-item"><a href="{% url 'folder_list' %}">Trainingsdaten</a></li>
