Add delete ingredient button

--- a/web/page/templates/pages/ingredients_list.html
+++ b/web/page/templates/pages/ingredients_list.html
@@ -261,12 +261,22 @@
                             <button class="btn btn-success increase-quantity" data-id="{{ ingredient.id }}"
                                 onclick="increaseQuantity('{{ ingredient.id }}')">+</button>
                         </div>
-                        <form method="POST" action="{% url 'suggested_recipes_keyword' %}">
-                            {% csrf_token %}
-                            <!-- Hier kommen Ihre vorhandenen Button-Codes -->
-                            <input type="hidden" name="ingredient" value="{{ ingredient.description }}">
-                            <button type="submit">Rezeptvorschläge</button>
-                          </form>
+                        <div class="btn-group btn-group-toggle btn-block" data-toggle="buttons">
+                            <form method="POST" action="{% url 'suggested_recipes_keyword' %}">
+                                {% csrf_token %}
+                                <!-- Hier kommen Ihre vorhandenen Button-Codes -->
+                                <input type="hidden" name="ingredient" value="{{ ingredient.description }}">
+                                <button type="submit" class="btn btn-success">Rezeptvorschläge</button>
+                              </form>
+                              <form method="POST" action="{% url 'delete_ingredient' %}">
+                                {% csrf_token %}
+                                <!-- Hier kommen Ihre vorhandenen Button-Codes -->
+                                <input type="hidden" name="ingredient" value="{{ ingredient.id }}">
+                                <button type="submit" class="btn btn-success">Zutat löschen</button>
+                              </form>
+                        </div>
+                    
+                        
                     </div>
                 </div>
             </div>
