--- a/web/page/templates/base.html
+++ b/web/page/templates/base.html
@@ -74,9 +74,17 @@
 
     <div id="sidebar">
         <ul class="list-group">
+            <li class="list-group-item">
+                <a href="#submenu" data-toggle="collapse">Zutaten</a>
+                <div class="collapse" id="submenu">
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="{% url 'ingredients_list_lists' %}">Liste</a></li>
+                        <li class="list-group-item"><a href="{% url 'ingredients_list' %}">Cards</a></li>
+                    </ul>
+                </div>
+            </li>
             <li class="list-group-item"><a href="{% url 'recipe_list' %}">Rezepte</a></li>
             <li class="list-group-item"><a href="{% url 'suggested_recipes' %}">Vorgeschlagene Rezepte</a></li>
-            <li class="list-group-item"><a href="{% url 'ingredients_list' %}">Zutaten</a></li>
             <li class="list-group-item"><a href="{% url 'classification' %}">Klassifizierung</a></li>
             <li class="list-group-item"><a href="{% url 'folder_list' %}">Trainingsdaten</a></li>
         </ul>
@@ -84,7 +92,7 @@
 
     <div id="content">
          {% block content %}
-        <!-- Hier kommt der Inhalt deiner Seite hin -->
+         
         {% endblock %}
     </div>
 
