--- a/web/page/templates/pages/suggested_recipes.html
+++ b/web/page/templates/pages/suggested_recipes.html
@@ -1,3 +1,5 @@
+<!-- recipes.html -->
+
 {% extends 'base.html' %}
 
 {% block content %}
@@ -9,8 +11,9 @@
     <style>
         .card {
             display: inline-block;
-            width: 45%;
-            height: 300px;
+            width: 100%;
+            max-width: 400px; /* Maximale Breite auf 400px begrenzen */
+            height: auto; /* Höhe an den Inhalt anpassen */
             margin: 10px;
             padding: 10px;
             border: 1px solid #ccc;
@@ -24,6 +27,19 @@
             object-fit: contain;
             margin-bottom: 10px;
             cursor: pointer;
+        }
+
+        h1 {
+            font-size: 24px; /* Größere Schriftgröße für den Titel */
+            margin-bottom: 20px; /* Zusätzlicher Abstand nach unten */
+        }
+        
+        @media only screen and (max-width: 500px) {
+            /* Für Bildschirme mit einer Breite von maximal 500px */
+            .card {
+                width: 100%; /* Volle Breite */
+                max-width: none; /* Maximale Breitenbegrenzung aufheben */
+            }
         }
     </style>
 </head>
@@ -40,10 +56,5 @@
     {% endfor %}
 </body>
 </html>
-
-
-
-
-
 
 {% endblock %}
