--- a/web/page/templates/pages/ingredients_list_lists.html
+++ b/web/page/templates/pages/ingredients_list_lists.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Inhaltsstoffe</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         .ingredient-item {
             display: flex;
@@ -17,32 +19,57 @@
 
         .ingredient-details {
             display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
+            flex-direction: column;
+            margin-left: 10px;
         }
 
-        .ingredient-details span {
-            margin-bottom: 5px;
+        .ingredient-details h5 {
+            margin-bottom: 0;
+            font-weight: bold;
+        }
+
+        .ingredient-details p {
+            margin-top: 0;
         }
     </style>
 </head>
 <body>
-    <h1>Zutaten</h1>
-    <ul>
-        {% for ingredient in ingredients %}
-            <li>
-                <div class="ingredient-item">
-                    <img src="{{ ingredient.img.url }}" alt="{{ ingredient.description }}">
-                    <div class="ingredient-details">
-                        <span>Description: {{ ingredient.description }}</span>
-                        <span>Quantity: {{ ingredient.quantity }}</span>
-                        <span>Weight: {{ ingredient.weight }}</span>
-                        <span>MHD: {{ ingredient.mhd }}</span>
-                        <span>Tags: {{ ingredient.tags.all|join:", " }}</span>
-                    </div>
-                </div>
-            </li>
-        {% endfor %}
-    </ul>
+    <div class="container">
+        <h1 class="mt-3">Zutaten</h1>
+        <div class="table-responsive mt-4">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Description</th>
+                        <th>Quantity</th>
+                        <th>Weight</th>
+                        <th>MHD</th>
+                        <th>Tags</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for ingredient in ingredients %}
+                        <tr>
+                            <td>
+                                <div class="ingredient-item">
+                                    <img src="{{ ingredient.img.url }}" alt="{{ ingredient.description }}">
+                                    <div class="ingredient-details">
+                                        <p>{{ ingredient.description }}</p>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>{{ ingredient.quantity }}</td>
+                            <td>{{ ingredient.weight }}</td>
+                            <td>{{ ingredient.mhd }}</td>
+                            <td>{{ ingredient.tags.all|join:", " }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
